--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Jaci Schneider-Harris</title>
+  <title>Jaci Harris</title>
   <%= stylesheet_link_tag 'application' %>
 	<%= stylesheet_link_tag 'reset-min','fonts-min','grids-min' %>
      <%= javascript_include_tag 'application','jquery','jquery.tablesorter.min' %>
@@ -13,7 +13,7 @@
 	<div class="topbar">
 		<div class="container">   
 	
-			<h3><%= link_to "Jaci Schneider-Harris", blogs_path, :method => 'index' %></h3>
+			<h3><%= link_to "Jaci Harris", blogs_path, :method => 'index' %></h3>
 			<ul>
 	        	<li class="active"><%= link_to "Home", blogs_path, :method => 'index' %></li>
 	        	<li><%= link_to "Resume", blogs_path, :method => 'index'%></li>
