--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,20 +1,14 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Post title:</b>
-  <%= @blog.post_title %>
-</p>
-
-<p>
-  <b>Created on:</b>
-  <%= @blog.created_on %>
-</p>
-
-<p>
-  <b>Text:</b>
-  <%= @blog.text %>
-</p>
-
-
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
-<%= link_to 'Back', blogs_path %>
+<div class ="container-dark">
+		<div class="row">
+			<br>
+			<br>
+	    <div class="profile span4 offset4" >
+	      <img src= "/assets/jaci.jpg" width= "267" height= "500"/>	     
+	    </div>
+		
+		<div class="profile span6" >
+	      <img src="http://placehold.it/500x500/ffffff&text=350+x+500+...+this+is+jaci's+profile" alt="" />
+	    </div>
+		  
+	</div>
+	</div>
