--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,17 @@
 	<div class="topbar">
 		<div class="container">   
 	
-			<h3><%= link_to "Jaci Harris", blogs_path, :method => 'index' %></h3>
+			<h3><%= link_to "Jaci Harris", pages_path %></h3>
 			<ul>
-	        	<li class="active"><%= link_to "Home", blogs_path, :method => 'index' %></li>
-	        	<li><%= link_to "Resume", blogs_path, :method => 'index'%></li>
-	       		<li><%= link_to "Portfolio", blogs_path, :method => 'index'%></li> 
-	       		<li><%= link_to "Professional Goals", blogs_path, :method => 'index'%></li> 
-	       		<li><%= link_to "Blog", blogs_path, :method => 'index'%></li> 
+	        	<li class="active"><%= link_to "Home", pages_path %></li>
+	        	<li><%= link_to "Resume", pages_path %></li>
+	       		<li><%= link_to "Projects", projects_path %></li> 
+	       		<li><%= link_to "Professional Goals", goals_path %></li> 
+	       		<li><%= link_to "Blog", blogs_path %></li> 
 	
 			</ul>
 			<ul class = "secondary-nav">
-				<li><%= link_to "Contact", blogs_path, :method => 'index'%></li> 
+				<li><%= link_to "Contact", pages_path %></li> 
 	       		
 			</ul>				              
 		</div>
