--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Jaci Harris</title>
-  <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag('application.css') %>
       <script type="text/javascript">
         <%= @content_for_page_scripts %>
       </script>  <%= csrf_meta_tag %>
