--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -3,11 +3,12 @@
 			<br>
 			<br>
 	    <div class="profile span4 offset4" >
-	      <img src= "/assets/jaci.jpg" width= "267" height= "500"/>	     
+	      <width= "250" height= "500"/>
+	   	  <h1><%= @blog.post_title %></h1>
 	    </div>
 		
 		<div class="profile span6" >
-	      <img src="http://placehold.it/500x500/ffffff&text=350+x+500+...+this+is+jaci's+profile" alt="" />
+		  <%= @blog.text %>
 	    </div>
 		  
 	</div>
