--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 	
 			<h3><%= link_to "Jaci Harris", pages_path %></h3>
 			<ul>
-	        	<li class="active"><%= link_to "Home", pages_path %></li>
-	        	<li><%= link_to "Resume", pages_path %></li>
+	        	<li><%= link_to "Home", pages_path %></li>
+	        	<li><%= link_to "Resume", resumes_path %></li>
 	       		<li><%= link_to "Projects", projects_path %></li> 
 	       		<li><%= link_to "Professional Goals", goals_path %></li> 
 	       		<li><%= link_to "Blog", blogs_path %></li> 
