--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,19 @@
 <p id="notice"><%= notice %></p>
 
+<div class ="container-dark">
+		<div class="row">
+			<br>
+			<br>
+	    <div class="profile span4 offset4" >
+	      <img src= "http://placehold.it/250x500/ffffff&text=250+x+500+...+PROJECT+IMAGE" width= "250" height= "500"/>	     
+	    </div>
+		
+		<div class="profile span6" >
+	      <img src="http://placehold.it/500x500/ffffff&text=350+x+500+...+specific+project+info+text+box" alt="" />
+	    </div>
+		  
+	</div>
+	</div>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
