--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
 			<h3><%= link_to "Jaci Harris", pages_path %></h3>
 			<ul>
 	        	<li><%= link_to "Home", pages_path %></li>
-	        	<li><%= link_to "Resume", resumes_path %></li>
+	        	<li><%= link_to "Resume", resume_page_path %></li>
 	       		<li><%= link_to "Projects", projects_path %></li> 
 	       		<li><%= link_to "Professional Goals", goals_path %></li> 
 	       		<li><%= link_to "Blog", blogs_path %></li> 
 	
 			</ul>
 			<ul class = "secondary-nav">
-				<li><%= link_to "Contact", pages_path %></li> 
+				<li><%= link_to "Contact", contact_page_path %></li> 
 	       		
 			</ul>				              
 		</div>
