--- a/app/views/pages/resume_page.html.erb
+++ b/app/views/pages/resume_page.html.erb
@@ -2,8 +2,8 @@
 		<div class="row">
 			<br>
 			<br>
-	    <div class="profile span4 offset4" >
-			<iframe src="http://docs.google.com/viewer?url=0B7tWnRpoXC-zNjFkNDMxZTQtN2FlZC00ODBiLTg3ZTgtZDYwMDY3Yzc5MDM2&hl=en_US&embedded=true" width="750" height="500" style="border: none;"></iframe>
+	    <div class="profile span4 offset2" >
+			<iframe src="https://docs.google.com/viewer?a=v&pid=explorer&srcid=0B4ZWu2Q8faGEMzc2YmJkMzgtNzM0ZC00MmZiLThiNjktMjE2MTgxMDRhOTk0&hl=en_US&embedded=true" width="950" height="500" style="border: none;"></iframe>
 </div>
 </div>
 </div>
