--- a/app/views/pages/contact_page.html.erb
+++ b/app/views/pages/contact_page.html.erb
@@ -9,9 +9,9 @@ margin: 0px 0px 0px 30px;
 			<br>
 			<br>
 			   <div class="profile span4 offset4" >
-			    <img src= "/assets/jaci.jpg" width= "267" height= "520"/>	
+			    <img src= "/assets/jaci_standing.png" width= "267" height= "510"/>	
 			</div>		
 			<div class= "profile span6">
-			<iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dHRzd2UxWHR0dDdZR2FTNUh5Q1htdUE6MQ" width="425" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading Contact Form</iframe>				
+			<iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dHRzd2UxWHR0dDdZR2FTNUh5Q1htdUE6MQ" width="475" height="510" frameborder="0" marginheight="0" marginwidth="0">Loading Contact Form</iframe>				
 </div>
 </div>	
