--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -10,7 +10,7 @@
 		<br>
 		<br>
 		<div class="profile span6 offset5" >
-		  <h3> <%= @goal.goal %> </h3>
+		  <h3> <%=raw simple_format(@goal.goal) %> </h3>
 	    </div>
 		  
 	</div>
