goals index view

--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -17,7 +17,7 @@
 	    </div>
 	<br>		
 		<div class="profile span6 offset5" >
-		<h3>  <%=raw simple_format(@goal.goal) %> </h3>
+		<h3>  <%=raw simple_format(goal.goal) %> </h3>
 	    </div>
 		  
 	</div>
