--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -1,19 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<div class ="container">
+<div class="container">
+	<div class= "row">
 			<br>
 			<br>
-	    <div class="profile span4 offset5" >
+	    <div class="profile span6 offset3" >
 	      <width= "250" height= "500"/>
 	   	  <h1><%= @goal.goal_header %></h1>
 	    </div>
-		<br>
-		<br>
-		<div class="profile span6 offset5" >
+		</div>
+	<div class= "row">
+		<div class="profile span6 offset3" >
 		  <h3> <%=raw simple_format(@goal.goal) %> </h3>
 	    </div>
-		  
+		</div>
 	</div>
 	</div>
+	<div class= "row">
+	<div class= "profile offset5">
 <%= link_to 'Edit', edit_goal_path(@goal) %> |
 <%= link_to 'Back', goals_path %>
+</div>
+</div>
