--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,29 +1,31 @@
 
-<% @goals.each do |goal| %>
-<div class ="container">
+		<div class ="container">
 			<br>
 			<br>
-	    <div class="profile span4 offset5" >
-	      <width= "250" height= "500"/>
-	   	  <h1><%= goal.goal_header %></h1>
-		<table>
-		<tr>
-		    <td><%= link_to 'Show', goal %></td>
-		    <td><%= link_to 'Edit', edit_goal_path(goal) %></td>
-		    <td><%= link_to 'Destroy', goal, confirm: 'Are you sure?', method: :delete %></td>
-		  </tr>
-		</table>
-		
-	    </div>
-	<br>		
-		<div class="profile span6 offset5" >
-		<h3>  <%=raw simple_format(goal.goal) %> </h3>
-	    </div>
-		  
-	</div>
-  
+			<% @goals.each do |goal| %>
+			<div class= "row">				
+			<div class="span4 offset3" >
+		    
+	   	  		<h1><%= goal.goal_header %></h1>
+					<table>
+					<tr>
+		    			<td><%= link_to 'Show', goal %></td>
+		    			<td><%= link_to 'Edit', edit_goal_path(goal) %></td>
+		    			<td><%= link_to 'Destroy', goal, confirm: 'Are you sure?', :method => 'destroy' %></td>
+		  			</tr>
+					</table>		
+	    	</div>
+			</div>
+			<div class= "row">
+			
+			<div class= "span4 offset3">
+				<h3><%= goal.goal %></h3>
+			</div>
+			</div>
+		<br>
+		<br> 
 <% end %>
-
-<br />
-
+<div class= "profile span6 offset4">
 <%= link_to 'New Goal', new_goal_path %>
+</div>
+</div>
