--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,10 +1,16 @@
+<style type= "text/css">
+.span9 {
+background-color:#ffffff;
+}
 
-		<div class ="container">
+</style>
+
+		<div class ="container-dark">
 			<br>
 			<br>
 			<% @goals.each do |goal| %>
 			<div class= "row">				
-			<div class="span9 offset3" >
+			<div class="span9 offset3" background-color= "white">
 		    
 	   	  		<h1><%= goal.goal_header %></h1>
 					<table>
