--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -5,7 +5,7 @@ background-color:#ffffff;
 
 </style>
 
-		<div class ="container-dark-extended">
+		<div class ="container-dark-extend">
 			<br>
 			<br>
 			<% @goals.each do |goal| %>
