--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -6,7 +6,7 @@ background-color:#ffffff;
 
 <p id="notice"><%= notice %></p>
 
-<div class="container-dark-extended">
+<div class="container-dark-extend">
 		<br>
 		<br>
 	<div class= "row">
