--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
-<div class ="container-dark">
+<div class ="container">
 		<div class="row">
 			<br>
 			<br>
-	    <div class="profile span4 offset4" >
+	    <div class="profile span4 offset2" >
 	      <img src= "/assets/jaci.jpg" width= "267" height= "500"/>	     
 	    </div>
 		
