--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Listing projects</h1>
-<div class ="container-dark">
+<div class ="container">
 
 <% @projects.each do |project| %>
 
 <p id="notice"><%= notice %></p>
 		<div class="row">
 			<br>
-	    <div class="profile span3 offset4" >
+	    <div class="profile span3 offset2" >
 	      <img src= "http://placehold.it/150x200/ffffff&text=250+x+500+...+SMALL+PROJECT+IMAGE" width= "170" height= "200"/>	     
 	    </div>
 		<div class="profile span6" >
