--- a/app/views/pages/resume_page.html.erb
+++ b/app/views/pages/resume_page.html.erb
@@ -1,12 +1,12 @@
-<div class ="container-dark">
+<div class ="container">
 		<div class="row">
 			<br>
 			<br>
-	    <div class="profile span4 offset2" >
-			<iframe src="https://docs.google.com/viewer?a=v&pid=explorer&srcid=0B4ZWu2Q8faGEMzc2YmJkMzgtNzM0ZC00MmZiLThiNjktMjE2MTgxMDRhOTk0&hl=en_US&embedded=true" width="950" height="500" style="border: none;"></iframe>
+	    <div class="profile span4 offset1" >
+			<iframe src="https://docs.google.com/viewer?a=v&pid=explorer&srcid=0B4ZWu2Q8faGEMzc2YmJkMzgtNzM0ZC00MmZiLThiNjktMjE2MTgxMDRhOTk0&hl=en_US&embedded=true" width="800" height="700" style="border: none;"></iframe>
 </div>
 </div>
-<div class="profile offset4" >
+<div class="profile offset2" >
 	<br>
 	<p>Click here to download a PDF version of Jaci's resume.</p>
 </div>
