--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<div class ="container-dark">
+<div class ="container">
 		<div class="row">
 			<br>
 			<br>
-	    <div class="profile span4 offset4" >
+	    <div class="profile span4 offset2" >
 	      <img src= "http://placehold.it/250x500/ffffff&text=250+x+500+...+PROJECT+IMAGE" width= "250" height= "500"/>	     
 	    </div>
 		
