--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -7,7 +7,7 @@
 		<div class="row">
 			<br>
 	    <div class="profile span3 offset2" width= "170" height= "200" >
-	       	<%= image_tag @project.project_pic_small.url %>	     
+	       	<%= image_tag project.project_pic_small.url %>	     
 	    </div>
 		<div class="profile span6" width= "500" height= "200" >
 			<%= raw simple_format(project.project_summary) %>  
