--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -25,12 +25,8 @@
     <%= f.text_area :project_detail %>
   </div>
   <div class="profile span4 offset4" >
-    <%= f.label :project_pic_small %><br />
+    <%= f.label :avatar %><br />
 	<p><%= f.file_field :project_pic_small %></p>
-  </div>
-  <div class="profile span4 offset4" >
-    <%= f.label :project_pic_large %><br />
-	<p><%= f.file_field :project_pic_large %></p>
   </div>
   <div class="actions">
     <%= f.submit %>
