chaning file_field on project

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -26,7 +26,7 @@
   </div>
   <div class="profile span4 offset4" >
     <%= f.label :avatar %><br />
-	<p><%= f.file_field :project_pic_small %></p>
+	<p><%= f.file_field :avatar %></p>
   </div>
   <div class="actions">
     <%= f.submit %>
