--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,10 +4,10 @@
 		<div class="row">
 			<br>
 			<br>
-	 		 <div class="profile span3 offset2" width= "250" height= "500" >
-				<%= image_tag @project.avatar(:large) %> </p>
+	 		 <div class="profile span3 offset3" width= "250" height= "500" >
+				<%= image_tag @project.avatar(:small) %> </p>
 			    </div>
-				<div class="profile span6 offset5" width= "500" height= "200" >
+				<div class="profile span8" width= "500" height= "200" >
 					<%= raw simple_format(@project.project_detail) %>  
 					<br>
 					<%= link_to 'Back to All Projects', projects_path %>
