--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -8,7 +8,7 @@
 				<br>
 				<h1>Resources and Links</h1>
 						<br><br>
-			   <h4>	<a href="http://www.ischool.utexas.edu"> UT iShoool</a></h4>
+			   <h4>	<a href="http://www.ischool.utexas.edu"> UT iSchool</a></h4>
 			   <h4>	<a href="http://www.ci.austin.tx.us/library"> Austin Public Library </a></h4>
 			   <h4>	<a href="http://www.sheshunoff.com"> Sheshunoff Information Services </a></h4>
 			   <h4>	<a href="http://www.davidccook.com/index.cfm"> David C Cook </a></h4>
