--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,14 +1,15 @@
+
 <div class ="container">
+		<br><br>
 		<div class="row">
 			<br>
-			<br>
-	    <div class="profile span4 offset2" >
+	    <div class="profile span5 offset2">
 	      <img src= "/assets/jaci.jpg" width= "267" height= "500"/>	     
 	    </div>
-		
-		<div class="profile span6" >
-	      <img src="http://placehold.it/500x500/ffffff&text=350+x+500+...+this+is+jaci's+profile" alt="" />
+
+		<div class="profile span6"/>
+		<br><br><br><br><br><br><br><br>
+		<h7>Welcome to my Website! I am Jaci Harris (formerly Jaci Schneider), and I am an information science student, an editor, a writer, and a library intern. On this site you can find my resume, my professional goals, and summaries of projects I’ve worked on. Please contact me if you'd like to get to know me. </h7>
 	    </div>
-		  
 	</div>
 	</div>
