--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,7 +9,12 @@
 
 		<div class="profile span6"/>
 		<br><br><br><br><br><br><br><br>
-		<h7>Welcome to my Website! I am Jaci Harris (formerly Jaci Schneider), and I am an information science student, an editor, a writer, and a library intern. On this site you can find my resume, my professional goals, and summaries of projects I’ve worked on. Please contact me if you'd like to get to know me. </h7>
+		<h7>Thank you for visiting my Web site! I am Jaci Harris (formerly
+			Jaci Schneider), and I am an information science student,
+			an editor, a writer, and a library intern. <br><br>
+			On this site you can find my resume, my professional goals,
+			and summaries of projects I’ve worked on.
+			Please <a href="http://cold-earth-4993.heroku.com/contact_page"> contact me</a> for more information. </h7>
 	    </div>
 	</div>
 	</div>
