--- a/app/views/pages/resume_page.html.erb
+++ b/app/views/pages/resume_page.html.erb
@@ -4,10 +4,12 @@
 			<br>
 	    <div class="profile span4 offset1" >
 			<iframe src="https://docs.google.com/viewer?a=v&pid=explorer&srcid=0B4ZWu2Q8faGEYjhkYmUzOWMtNWU4ZC00NWJkLWE2M2YtYWMwYzkwYTk3NTQ3&hl=en_US&embedded=true" width="800" height="700" style="border: none;"></iframe>
+		</div>
 </div>
+<div class="row">
+<div class="offset2" >
+<br>
+<h6>Click <a href="https://s3.amazonaws.com/jaci-harris/Jaci+Harris+R%C3%A9sum%C3%A9.pdf"> here to download </a> a PDF version of Jaci's resume.</h6>
 </div>
-<div class="profile offset2" >
-	<br>
-	<p>Click here to download a PDF version of Jaci's resume.</p>
 </div>
 </div>
