--- a/app/views/goals/show.html.erb
+++ b/app/views/goals/show.html.erb
@@ -21,7 +21,6 @@ background-color:#ffffff;
 		</div>
 	<div class= "row">
 	<div class= "span9 offset3">
-<%= link_to 'Edit', edit_goal_path(@goal) %> |
-<%= link_to 'Back', goals_path %>
+<%= link_to 'Back to Professional Goals', goals_path %>
 </div>
 </div>
