--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,7 +12,7 @@
 		<h7>Thank you for visiting my Web site! I am Jaci Harris (formerly
 			Jaci Schneider), and I am an information science student,
 			an editor, a writer, and a library intern. <br><br>
-			On this site you can find my resume, my professional goals,
+			On this site you can find my résumé, my professional goals,
 			and summaries of projects I’ve worked on.
 			Please <a href="http://cold-earth-4993.heroku.com/contact_page"> contact me</a> for more information. </h7>
 	    </div>
