--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,9 +6,13 @@
 		<div class="row">
 			<br>
 	    <div class="profile span3 offset2" width= "170" height= "200" >
+				<br>
+				<br>
 		<%= image_tag project.avatar(:small) %> </p>
 	    </div>
 		<div class="profile span8" width= "500" height= "200" >
+			<h3><%= project.project_title %></h3>
+			<br>
 			<%= raw simple_format(project.project_summary) %>  
 			<br>
 			<%= link_to 'See Project Details', project %>	
