--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -8,7 +8,8 @@
 	    <div class="profile span3 offset2" width= "170" height= "200" >
 				<br>
 				<br>
-		<%= image_tag project.avatar(:small) %> </p>
+				<br>
+		<%= image_tag project.avatar(:small) %>
 	    </div>
 		<div class="profile span8" width= "500" height= "200" >
 			<h3><%= project.project_title %></h3>
