--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,10 +4,15 @@
 		<div class="row">
 			<br>
 			<br>
-	 		 <div class="profile span3 offset3" width= "250" height= "500" >
+	 		 <div class="profile span3 offset3" width= "250" height= "500">
+						<br>
+						<br>
+						<br>
 				<%= image_tag @project.avatar(:small) %> </p>
 			    </div>
 				<div class="profile span8" width= "500" height= "200" >
+						<h3><%= @project.project_title %></h3>
+						<br>
 					<%= raw simple_format(@project.project_detail) %>  
 					<br>
 					<%= link_to 'Back to All Projects', projects_path %>
@@ -21,9 +26,14 @@
 						<div class="row">
 							<br>
 					    <div class="profile span3 offset2" width= "170" height= "200" >
-						<%= image_tag project.avatar(:small) %> </p>
+										<br>
+										<br>
+										<br>
+							<%= image_tag project.avatar(:small) %>
 					    </div>
 						<div class="profile span8" width= "500" height= "200" >
+								<h3><%= project.project_title %></h3>
+								<br>
 							<%= raw simple_format(project.project_summary) %>  
 							<br>
 							<%= link_to 'See Project Details', project %>	
