--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -3,6 +3,15 @@
 background-color:#ffffff;
 margin: 0px 0px 0px 0px;
 }
+ul li: {
+  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  line-height: 18px;
+  color: #808080;
+  text-rendering: optimizeLegibility;
+}
 
 </style>
 
